--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       autocomplete="off"
                     >
                       <input
-                        type="text"
+                        type="number"
                         id="digit-1"
                         name="digit-1"
                         onkeyup='tabChange(1)'
@@ -45,7 +45,7 @@
                         oninput='digitValidate(this)'
                       />
                       <input
-                        type="text"
+                        type="number"
                         id="digit-2"
                         name="digit-2"
                         onkeyup='tabChange(2)'
@@ -53,7 +53,7 @@
                         oninput='digitValidate(this)'
                       />
                       <input
-                        type="text"
+                        type="number"
                         id="digit-3"
                         name="digit-3"
                         onkeyup='tabChange(3)'
@@ -61,7 +61,7 @@
                         oninput='digitValidate(this)'
                       />
                       <input
-                        type="text"
+                        type="number"
                         id="digit-4"
                         name="digit-4"
                         onkeyup='tabChange(4)'
@@ -101,7 +101,7 @@
           autocomplete="off"
         >
           <input
-            type="text"
+            type="number"
             id="digit-1"
             name="digit-1"
             onkeyup='tabChange(1)'
@@ -109,7 +109,7 @@
             oninput='digitValidate(this)'
           />
           <input
-            type="text"
+            type="number"
             id="digit-2"
             name="digit-2"
             onkeyup='tabChange(2)'
@@ -117,7 +117,7 @@
             oninput='digitValidate(this)'
           />
           <input
-            type="text"
+            type="number"
             id="digit-3"
             name="digit-3"
             onkeyup='tabChange(3)'
@@ -125,7 +125,7 @@
             oninput='digitValidate(this)'
           />
           <input
-            type="text"
+            type="number"
             id="digit-4"
             name="digit-4"
             onkeyup='tabChange(4)'
