--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                       autocomplete="off"
                     >
                       <input
+                        class="input1"
                         type="number"
                         id="digit-1"
                         name="digit-1"
@@ -45,6 +46,7 @@
                         oninput='digitValidate(this)'
                       />
                       <input
+                       class="input1"
                         type="number"
                         id="digit-2"
                         name="digit-2"
@@ -53,6 +55,7 @@
                         oninput='digitValidate(this)'
                       />
                       <input
+                       class="input1"
                         type="number"
                         id="digit-3"
                         name="digit-3"
@@ -61,6 +64,7 @@
                         oninput='digitValidate(this)'
                       />
                       <input
+                       class="input1"
                         type="number"
                         id="digit-4"
                         name="digit-4"
@@ -69,7 +73,7 @@
                         oninput='digitValidate(this)'
                       />
                     </form>
-                    <button class="btn verify my-2">Verify</button><br />
+                    <button class="btn verify my-2" id="verify1">Verify</button><br />
                     <a href="#" class="my-2 resend">Resend</a>
                   </div>
                   <div class="col-md-2"></div>
@@ -101,39 +105,44 @@
           autocomplete="off"
         >
           <input
+            class="input2"
             type="number"
             id="digit-1"
             name="digit-1"
-            onkeyup='tabChange(1)'
+            onkeyup='tabChange2(1)'
             maxlength=1
             oninput='digitValidate(this)'
           />
           <input
+          class="input2"
+
             type="number"
             id="digit-2"
             name="digit-2"
-            onkeyup='tabChange(2)'
+            onkeyup='tabChange2(2)'
             maxlength=1
             oninput='digitValidate(this)'
           />
           <input
+          class="input2"
             type="number"
             id="digit-3"
             name="digit-3"
-            onkeyup='tabChange(3)'
+            onkeyup='tabChange2(3)'
             maxlength=1
             oninput='digitValidate(this)'
           />
           <input
+            class="input2"
             type="number"
             id="digit-4"
             name="digit-4"
-            onkeyup='tabChange(4)'
+            onkeyup='tabChange2(4)'
             maxlength=1
             oninput='digitValidate(this)'
           />
         </form>
-        <button class="btn verify my-2 mt-1">Verify</button><br />
+        <button class="btn verify my-2 mt-1" id="verify2">Verify</button><br />
         <a href="#" class="mt-3 resend">resend</a>
     </div>
     </div>
@@ -142,16 +151,35 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script>
       let digitValidate = function(ele){
-  console.log(ele.value);
   ele.value = ele.value.replace(/[^0-9]/g,'');
 }
 
 let tabChange = function(val){
-    let ele = document.querySelectorAll('input');
+    let ele = document.querySelectorAll('.input1');
     if(ele[val-1].value != ''){
+      if(val!=4){
       ele[val].focus()
+      }else{
+        document.getElementById('verify1').focus()
+      }
     }else if(ele[val-1].value == ''){
+      if(val!=1){
       ele[val-2].focus()
+      }
+    }   
+ }
+ let tabChange2 = function(val){
+    let ele = document.querySelectorAll('.input2');
+    if(ele[val-1].value != ''){
+      if(val!=4){
+      ele[val].focus()
+      }else{
+        document.getElementById('verify2').focus()
+      }
+    }else if(ele[val-1].value == ''){
+      if(val!=1){
+      ele[val-2].focus()
+      }
     }   
  }
     </script>
