--- a/index.html
+++ b/index.html
@@ -10,28 +10,34 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./style.css" />
- 
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 main-container">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 main-container">
           <div class="row">
-            <div class="col-md-6 otp-container">
+            <div class="col-md-5 otp-container">
               <div class="form-container my-2 text-center">
                 <div class="row">
-                  <div class="col-md-2"></div>
-                  <div class="col-md-8">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-10">
                     <button class="btn my-btn mb-3">Raul Construction</button>
-                    <p class="mt-2 para">Enter the OTP sent to your number ending with 61</p>
+                    <div class="my-2">
+                    <p class="mt-2 para">
+                      Enter the OTP sent to your number ending with 61
+                    </p>
+                  </div>
                     <form
                       method="get"
-                      class="digit-group my-3"
+                      class="digit-group my-3 mt-4"
                       data-group-name="digits"
                       data-autosubmit="false"
                       autocomplete="off"
@@ -41,65 +47,72 @@
                         type="number"
                         id="digit-1"
                         name="digit-1"
-                        onkeyup='tabChange(1)'
-                        maxlength=1
-                        oninput='digitValidate(this)'
+                        onkeyup="tabChange(1)"
+                        maxlength="1"
+                        oninput="digitValidate(this)"
                       />
                       <input
-                       class="input1"
+                        class="input1"
                         type="number"
                         id="digit-2"
                         name="digit-2"
-                        onkeyup='tabChange(2)'
-                        maxlength=1
-                        oninput='digitValidate(this)'
+                        onkeyup="tabChange(2)"
+                        maxlength="1"
+                        oninput="digitValidate(this)"
                       />
                       <input
-                       class="input1"
+                        class="input1"
                         type="number"
                         id="digit-3"
                         name="digit-3"
-                        onkeyup='tabChange(3)'
-                        maxlength=1
-                        oninput='digitValidate(this)'
+                        onkeyup="tabChange(3)"
+                        maxlength="1"
+                        oninput="digitValidate(this)"
                       />
                       <input
-                       class="input1"
+                        class="input1"
                         type="number"
                         id="digit-4"
                         name="digit-4"
-                        onkeyup='tabChange(4)'
-                        maxlength=1
-                        oninput='digitValidate(this)'
+                        onkeyup="tabChange(4)"
+                        maxlength="1"
+                        oninput="digitValidate(this)"
                       />
                     </form>
-                    <button class="btn verify my-2" id="verify1">Verify</button><br />
+                    <button class="btn verify my-2" id="verify1">Verify</button
+                    ><br />
                     <a href="#" class="my-2 resend">Resend</a>
                   </div>
-                  <div class="col-md-2"></div>
+                  <div class="col-md-1"></div>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 img-container">
+            <div class="col-md-7 img-container p-2 py-5">
               <img
                 width="100%"
-                src="./otp_verify.jpg"
+                src="./otp.jpg"
                 alt="image loading failed"
+                class="p-2 py-5"
               />
             </div>
           </div>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-3"></div>
       </div>
     </div>
 
     <div class="container mobile-cont">
-        <div class="text-center">
-    <button class="btn my-btn">Raul Construction</button>
-        <p class="mt-4 para">Enter the OTP sent to your number ending with 61</p>
+      <div class="text-center">
+        <button class="btn my-btn">Raul Construction</button><br>
+        <img src="./otp.jpg" alt="" class="w-100 p-2"><br>
+        <div class="para-div">
+        <span class="mt-4 para">
+          Enter the OTP sent to your number ending with 61
+        </span>
+      </div>
         <form
           method="get"
-          class="digit-group my-3"
+          class="digit-group mb-3 mt-4"
           data-group-name="digits"
           data-autosubmit="false"
           autocomplete="off"
@@ -109,82 +122,87 @@
             type="number"
             id="digit-1"
             name="digit-1"
-            onkeyup='tabChange2(1)'
-            maxlength=1
-            oninput='digitValidate(this)'
+            onkeyup="tabChange2(1)"
+            maxlength="1"
+            oninput="digitValidate(this)"
           />
           <input
-          class="input2"
-
+            class="input2"
             type="number"
             id="digit-2"
             name="digit-2"
-            onkeyup='tabChange2(2)'
-            maxlength=1
-            oninput='digitValidate(this)'
+            onkeyup="tabChange2(2)"
+            maxlength="1"
+            oninput="digitValidate(this)"
           />
           <input
-          class="input2"
+            class="input2"
             type="number"
             id="digit-3"
             name="digit-3"
-            onkeyup='tabChange2(3)'
-            maxlength=1
-            oninput='digitValidate(this)'
+            onkeyup="tabChange2(3)"
+            maxlength="1"
+            oninput="digitValidate(this)"
           />
           <input
             class="input2"
             type="number"
             id="digit-4"
             name="digit-4"
-            onkeyup='tabChange2(4)'
-            maxlength=1
-            oninput='digitValidate(this)'
+            onkeyup="tabChange2(4)"
+            maxlength="1"
+            oninput="digitValidate(this)"
           />
         </form>
         <button class="btn verify my-2 mt-1" id="verify2">Verify</button><br />
         <a href="#" class="mt-3 resend">resend</a>
+      </div>
     </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"
+    ></script>
     <script>
-      let digitValidate = function(ele){
-  ele.value = ele.value.replace(/[^0-9]/g,'');
-}
+      let digitValidate = function (ele) {
+        ele.value = ele.value.replace(/[^0-9]/g, "");
+      };
 
-let tabChange = function(val){
-    let ele = document.querySelectorAll('.input1');
-    if(ele[val-1].value != ''){
-      if(val!=4){
-      ele[val].focus()
-      }else{
-        document.getElementById('verify1').focus()
-      }
-    }else if(ele[val-1].value == ''){
-      if(val!=1){
-      ele[val-2].focus()
-      }
-    }   
- }
- let tabChange2 = function(val){
-    let ele = document.querySelectorAll('.input2');
-    if(ele[val-1].value != ''){
-      if(val!=4){
-      ele[val].focus()
-      }else{
-        document.getElementById('verify2').focus()
-      }
-    }else if(ele[val-1].value == ''){
-      if(val!=1){
-      ele[val-2].focus()
-      }
-    }   
- }
+      let tabChange = function (val) {
+        let ele = document.querySelectorAll(".input1");
+        if (ele[val - 1].value != "") {
+          if (val != 4) {
+            ele[val].focus();
+          } else {
+            document.getElementById("verify1").focus();
+          }
+        } else if (ele[val - 1].value == "") {
+          if (val != 1) {
+            ele[val - 2].focus();
+          }
+        }
+      };
+      let tabChange2 = function (val) {
+        let ele = document.querySelectorAll(".input2");
+        if (ele[val - 1].value != "") {
+          if (val != 4) {
+            ele[val].focus();
+          } else {
+            document.getElementById("verify2").focus();
+          }
+        } else if (ele[val - 1].value == "") {
+          if (val != 1) {
+            ele[val - 2].focus();
+          }
+        }
+      };
     </script>
-    <script>
-
-    </script>
+    <script></script>
   </body>
 </html>
