--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="loader-container">
+    <div class="loader hidden" id="loader"></div>
+  </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3"></div>
@@ -31,7 +34,7 @@
                   <div class="col-md-10">
                     <button class="btn my-btn mb-3">Raul Construction</button>
                     <div class="my-2">
-                    <p class="mt-2 para">
+                    <p class="mt-2 para" id="para1">
                       Enter the OTP sent to your number ending with 61
                     </p>
                   </div>
@@ -45,7 +48,7 @@
                       <input
                         class="input1"
                         type="number"
-                        id="digit-1"
+                        id="digit-01"
                         name="digit-1"
                         onkeyup="tabChange(1)"
                         maxlength="1"
@@ -54,7 +57,7 @@
                       <input
                         class="input1"
                         type="number"
-                        id="digit-2"
+                        id="digit-02"
                         name="digit-2"
                         onkeyup="tabChange(2)"
                         maxlength="1"
@@ -63,7 +66,7 @@
                       <input
                         class="input1"
                         type="number"
-                        id="digit-3"
+                        id="digit-03"
                         name="digit-3"
                         onkeyup="tabChange(3)"
                         maxlength="1"
@@ -72,14 +75,14 @@
                       <input
                         class="input1"
                         type="number"
-                        id="digit-4"
+                        id="digit-04"
                         name="digit-4"
                         onkeyup="tabChange(4)"
                         maxlength="1"
                         oninput="digitValidate(this)"
                       />
                     </form>
-                    <button class="btn verify my-2" id="verify1">Verify</button
+                    <button class="btn verify my-2" onclick="verifyOne()" id="verify1">Verify</button
                     ><br />
                     <a href="#" class="my-2 resend">Resend</a>
                   </div>
@@ -106,7 +109,7 @@
         <button class="btn my-btn">Raul Construction</button><br>
         <img src="./otp.jpg" alt="" class="w-100 p-2"><br>
         <div class="para-div">
-        <span class="mt-4 para">
+        <span class="mt-4 para" id="para2">
           Enter the OTP sent to your number ending with 61
         </span>
       </div>
@@ -120,7 +123,7 @@
           <input
             class="input2"
             type="number"
-            id="digit-1"
+            id="digit-11"
             name="digit-1"
             onkeyup="tabChange2(1)"
             maxlength="1"
@@ -129,7 +132,7 @@
           <input
             class="input2"
             type="number"
-            id="digit-2"
+            id="digit-12"
             name="digit-2"
             onkeyup="tabChange2(2)"
             maxlength="1"
@@ -138,7 +141,7 @@
           <input
             class="input2"
             type="number"
-            id="digit-3"
+            id="digit-13"
             name="digit-3"
             onkeyup="tabChange2(3)"
             maxlength="1"
@@ -147,14 +150,14 @@
           <input
             class="input2"
             type="number"
-            id="digit-4"
+            id="digit-14"
             name="digit-4"
             onkeyup="tabChange2(4)"
             maxlength="1"
             oninput="digitValidate(this)"
           />
         </form>
-        <button class="btn verify my-2 mt-1" id="verify2">Verify</button><br />
+        <button class="btn verify my-2 mt-1" onclick="verifyTwo()" id="verify2">Verify</button><br />
         <a href="#" class="mt-3 resend">resend</a>
       </div>
     </div>
@@ -202,6 +205,33 @@
           }
         }
       };
+
+     
+
+      function verifyOne(){
+        document.getElementById('loader').classList.remove('hidden')
+        let digit1 = document.getElementById('digit-01').value
+        let digit2 = document.getElementById('digit-02').value
+        let digit3 = document.getElementById('digit-03').value
+        let digit4 = document.getElementById('digit-04').value
+        let otp = digit1 + digit2 + digit3 + digit4
+        setTimeout(function() {
+          document.getElementById('loader').classList.add('hidden')
+          document.getElementById('para1').innerHTML = `Your entered otp is ${otp}`
+}, 3000);
+      }
+      function verifyTwo(){
+        document.getElementById('loader').classList.remove('hidden')
+        let digit1 = document.getElementById('digit-11').value
+        let digit2 = document.getElementById('digit-12').value
+        let digit3 = document.getElementById('digit-13').value
+        let digit4 = document.getElementById('digit-14').value
+        let otp = digit1 + digit2 + digit3 + digit4
+        setTimeout(function() {
+          document.getElementById('loader').classList.add('hidden')
+          document.getElementById('para2').innerHTML = `Your entered otp is ${otp}`
+}, 3000);
+      }
     </script>
     <script></script>
   </body>
